[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/toolbox_project/dock/ScreenInfo.gd" type="Script" id=1]

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 111, 111, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 55, 55, 55, 0, 111, 111, 111, 0, 56, 56, 56, 0, 53, 53, 53, 0, 217, 217, 217, 23, 223, 223, 223, 66, 167, 167, 167, 40, 108, 108, 108, 0, 220, 220, 220, 100, 224, 224, 224, 216, 223, 223, 223, 155, 111, 111, 111, 0, 56, 56, 56, 0, 222, 222, 222, 23, 167, 167, 167, 24, 56, 56, 56, 0, 222, 222, 222, 70, 223, 223, 223, 171, 222, 222, 222, 113, 106, 106, 106, 0, 216, 216, 216, 96, 224, 224, 224, 255, 223, 223, 223, 183, 110, 110, 110, 0, 219, 219, 219, 44, 224, 224, 224, 255, 224, 224, 224, 197, 112, 112, 112, 0, 223, 223, 223, 56, 224, 224, 224, 255, 223, 223, 223, 187, 111, 111, 111, 0, 220, 220, 220, 40, 224, 224, 224, 254, 224, 224, 224, 233, 164, 164, 164, 7, 167, 167, 167, 8, 223, 223, 223, 183, 222, 222, 222, 156, 161, 161, 161, 6, 55, 55, 55, 0, 221, 221, 221, 38, 165, 165, 165, 9, 0, 0, 0, 0, 221, 221, 221, 19, 224, 224, 224, 238, 223, 223, 223, 196, 220, 220, 220, 18, 55, 55, 55, 0, 223, 223, 223, 73, 222, 222, 222, 50, 159, 159, 159, 5, 0, 0, 0, 0, 111, 111, 111, 0, 110, 110, 110, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 55, 55, 55, 0, 224, 224, 224, 0, 224, 224, 224, 0, 167, 167, 167, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 168, 168, 168, 0, 178, 240, 201, 0, 178, 240, 201, 0, 168, 168, 168, 0, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 178, 239, 200, 0, 132, 255, 177, 255, 132, 255, 177, 255, 178, 240, 201, 0, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 168, 168, 168, 0, 178, 239, 200, 0, 99, 191, 133, 0, 132, 255, 177, 255, 132, 255, 177, 255, 99, 191, 133, 0, 178, 239, 200, 0, 0, 0, 0, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 178, 239, 200, 0, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 66, 128, 89, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 178, 239, 200, 0, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 132, 255, 177, 255, 66, 128, 89, 0, 112, 112, 112, 0, 224, 224, 224, 225, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 168, 168, 168, 0, 178, 239, 200, 0, 99, 191, 133, 0, 132, 255, 177, 255, 132, 255, 177, 255, 99, 191, 133, 0, 66, 128, 89, 0, 0, 0, 0, 0, 54, 54, 54, 0, 219, 219, 219, 72, 224, 224, 224, 227, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 178, 239, 200, 0, 132, 255, 177, 255, 132, 255, 177, 255, 66, 128, 89, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 54, 54, 54, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0, 66, 128, 89, 0, 66, 128, 89, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0
image = SubResource( 7 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 111, 111, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 55, 55, 55, 0, 111, 111, 111, 0, 56, 56, 56, 0, 53, 53, 53, 0, 217, 217, 217, 23, 223, 223, 223, 66, 167, 167, 167, 40, 108, 108, 108, 0, 220, 220, 220, 100, 224, 224, 224, 216, 223, 223, 223, 155, 111, 111, 111, 0, 56, 56, 56, 0, 222, 222, 222, 23, 167, 167, 167, 24, 56, 56, 56, 0, 222, 222, 222, 70, 223, 223, 223, 171, 222, 222, 222, 113, 106, 106, 106, 0, 216, 216, 216, 96, 224, 224, 224, 255, 223, 223, 223, 183, 110, 110, 110, 0, 219, 219, 219, 44, 224, 224, 224, 255, 224, 224, 224, 197, 112, 112, 112, 0, 223, 223, 223, 56, 224, 224, 224, 255, 223, 223, 223, 187, 111, 111, 111, 0, 220, 220, 220, 40, 224, 224, 224, 254, 224, 224, 224, 233, 164, 164, 164, 7, 167, 167, 167, 8, 223, 223, 223, 183, 222, 222, 222, 156, 161, 161, 161, 6, 55, 55, 55, 0, 221, 221, 221, 38, 165, 165, 165, 9, 0, 0, 0, 0, 221, 221, 221, 19, 224, 224, 224, 238, 223, 223, 223, 196, 220, 220, 220, 18, 55, 55, 55, 0, 223, 223, 223, 73, 222, 222, 222, 50, 159, 159, 159, 5, 0, 0, 0, 0, 111, 111, 111, 0, 110, 110, 110, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 55, 55, 55, 0, 224, 224, 224, 0, 224, 224, 224, 0, 167, 167, 167, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 112, 112, 112, 0, 224, 224, 224, 225, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 54, 54, 54, 0, 219, 219, 219, 72, 224, 224, 224, 227, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 112, 112, 112, 0, 0, 0, 0, 0, 54, 54, 54, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 112, 112, 112, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=4]
flags = 0
flags = 0
image = SubResource( 8 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 105, 105, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 112, 112, 112, 0, 217, 217, 217, 158, 163, 163, 163, 10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 43, 43, 43, 0, 111, 111, 111, 0, 112, 112, 112, 0, 112, 112, 112, 0, 167, 167, 167, 0, 223, 223, 223, 254, 223, 223, 223, 211, 210, 210, 210, 41, 53, 53, 53, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 56, 56, 0, 203, 203, 203, 75, 223, 223, 223, 189, 223, 223, 223, 241, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 243, 222, 222, 222, 94, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 55, 55, 55, 0, 222, 222, 222, 131, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 244, 222, 222, 222, 94, 55, 55, 55, 0, 56, 56, 56, 0, 55, 55, 55, 0, 0, 0, 0, 0, 43, 43, 43, 0, 202, 202, 202, 74, 223, 223, 223, 254, 223, 223, 223, 248, 223, 223, 223, 118, 222, 222, 222, 25, 112, 112, 112, 0, 167, 167, 167, 0, 223, 223, 223, 254, 223, 223, 223, 211, 210, 210, 210, 42, 53, 53, 53, 0, 56, 56, 56, 0, 223, 223, 223, 125, 222, 222, 222, 64, 0, 0, 0, 0, 111, 111, 111, 0, 222, 222, 222, 188, 223, 223, 223, 254, 223, 223, 223, 118, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 111, 111, 0, 217, 217, 217, 158, 163, 163, 163, 10, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 68, 223, 223, 223, 254, 223, 223, 223, 181, 111, 111, 111, 0, 111, 111, 111, 0, 223, 223, 223, 240, 223, 223, 223, 254, 223, 223, 223, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 105, 105, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 18, 223, 223, 223, 254, 223, 223, 223, 231, 112, 112, 112, 0, 111, 111, 111, 0, 223, 223, 223, 232, 223, 223, 223, 254, 220, 220, 220, 17, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 105, 105, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 24, 223, 223, 223, 254, 223, 223, 223, 240, 111, 111, 111, 0, 111, 111, 111, 0, 223, 223, 223, 183, 223, 223, 223, 254, 223, 223, 223, 69, 0, 0, 0, 0, 0, 0, 0, 0, 163, 163, 163, 10, 217, 217, 217, 158, 111, 111, 111, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 56, 56, 0, 223, 223, 223, 117, 223, 223, 223, 254, 222, 222, 222, 188, 111, 111, 111, 0, 0, 0, 0, 0, 223, 223, 223, 65, 222, 222, 222, 126, 56, 56, 56, 0, 53, 53, 53, 0, 210, 210, 210, 42, 223, 223, 223, 211, 223, 223, 223, 254, 167, 167, 167, 0, 112, 112, 112, 0, 222, 222, 222, 25, 223, 223, 223, 118, 223, 223, 223, 248, 223, 223, 223, 254, 202, 202, 202, 74, 43, 43, 43, 0, 0, 0, 0, 0, 56, 56, 56, 0, 56, 56, 56, 0, 55, 55, 55, 0, 222, 222, 222, 94, 223, 223, 223, 244, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 131, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 56, 56, 0, 222, 222, 222, 94, 223, 223, 223, 244, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 241, 223, 223, 223, 189, 203, 203, 203, 75, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 53, 53, 0, 210, 210, 210, 42, 223, 223, 223, 211, 223, 223, 223, 254, 167, 167, 167, 0, 112, 112, 112, 0, 112, 112, 112, 0, 111, 111, 111, 0, 43, 43, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 164, 164, 10, 217, 217, 217, 158, 111, 111, 111, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 105, 105, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=6]
flags = 0
flags = 0
image = SubResource( 9 )
size = Vector2( 16, 16 )

[node name="ScreenInfo" type="VBoxContainer"]
margin_right = 92.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="DoesExist" type="HBoxContainer" parent="."]
margin_right = 92.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="DoesExist"]
margin_bottom = 14.0
stretch_mode = 4

[node name="Label" type="Label" parent="DoesExist"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Btns" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="Btns"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 3
icon = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Open" type="Button" parent="Btns"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
size_flags_horizontal = 3
icon = SubResource( 4 )

[node name="Reset" type="Button" parent="Btns"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
size_flags_horizontal = 3
icon = SubResource( 6 )

[connection signal="pressed" from="Btns/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Btns/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="Btns/Reset" to="." method="_on_Reset_pressed"]
